rpi5/firefox/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: firefox
  labels:
    app: firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefox
  serviceName: firefox
  template:
    metadata:
      name: firefox
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: firefox
    spec:
      containers:
        - name: firefox
          image: linuxserver/firefox:1143.0.1@sha256:bda1c36e4c409c9a841beebdd77c1b9b91634e59c9238cd2aa0ee6845957bf7d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: data
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
