rpi5/firefox/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefox
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`firefox.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: oauth-firefox
          port: 80
  tls:
    secretName: firefox-cert-tls
    domains:
      - main: firefox.internal
